gcc/tree-vect-patterns.cc
@@ -760,7 +760,8 @@ vect_split_statement (vec_info *vinfo, stmt_vec_info stmt2_info, tree new_rhs,
 	{
 	  dump_printf_loc (MSG_NOTE, vect_location,
 			   "into pattern statements: %G", stmt1);
-	  dump_printf_loc (MSG_NOTE, vect_location, "and: %G", new_stmt2);
+	  dump_printf_loc (MSG_NOTE, vect_location, "and: %G",
+			   (gimple *) new_stmt2);
 	}
 
       return true;
@@ -2287,7 +2288,7 @@ vect_recog_mulhs_pattern (vec_info *vinfo,
 
   if (dump_enabled_p ())
     dump_printf_loc (MSG_NOTE, vect_location,
-		     "created pattern stmt: %G", mulhrs_stmt);
+		     "created pattern stmt: %G", (gimple *) mulhrs_stmt);
 
   return vect_convert_output (vinfo, last_stmt_info, lhs_type,
 			      mulhrs_stmt, new_vectype);
@@ -2493,7 +2494,7 @@ vect_recog_average_pattern (vec_info *vinfo,
 
   if (dump_enabled_p ())
     dump_printf_loc (MSG_NOTE, vect_location,
-		     "created pattern stmt: %G", average_stmt);
+		     "created pattern stmt: %G", (gimple *) average_stmt);
 
   return vect_convert_output (vinfo, last_stmt_info,
 			      type, average_stmt, new_vectype);
@@ -5289,7 +5290,7 @@ vect_determine_precisions_from_range (stmt_vec_info stmt_info, gassign *stmt)
     dump_printf_loc (MSG_NOTE, vect_location, "can narrow to %s:%d"
 		     " without loss of precision: %G",
 		     sign == SIGNED ? "signed" : "unsigned",
-		     value_precision, stmt);
+		     value_precision, (gimple *) stmt);
 
   vect_set_operation_type (stmt_info, type, value_precision, sign);
   vect_set_min_input_precision (stmt_info, type, value_precision);
@@ -5370,7 +5371,7 @@ vect_determine_precisions_from_users (stmt_vec_info stmt_info, gassign *stmt)
 	dump_printf_loc (MSG_NOTE, vect_location, "can narrow to %s:%d"
 			 " without affecting users: %G",
 			 TYPE_UNSIGNED (type) ? "unsigned" : "signed",
-			 operation_precision, stmt);
+			 operation_precision, (gimple *) stmt);
       vect_set_operation_type (stmt_info, type, operation_precision,
 			       TYPE_SIGN (type));
     }
